third_party/move/move-compiler-v2/tests/checking-lang-v2.4/access_specifiers/access_ok.exp

Diagnostics:
error: not supported before language version `2.4-unstable`: read/write access specifiers.
  ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:8:20
  │
8 │     fun f2() reads S {
  │                    ^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:11:21
   │
11 │     fun f3() writes S {
   │                     ^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:14:20
   │
14 │     fun f4() reads S(*) {
   │                    ^^^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:17:28
   │
17 │     fun f_multiple() reads R writes T, S reads G<u64> {
   │                            ^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:17:37
   │
17 │     fun f_multiple() reads R writes T, S reads G<u64> {
   │                                     ^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:17:40
   │
17 │     fun f_multiple() reads R writes T, S reads G<u64> {
   │                                        ^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:17:48
   │
17 │     fun f_multiple() reads R writes T, S reads G<u64> {
   │                                                ^^^^^^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:20:20
   │
20 │     fun f5() reads 0x42::*::* {
   │                    ^^^^^^^^^^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:23:20
   │
23 │     fun f6() reads 0x42::m::* {
   │                    ^^^^^^^^^^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:26:20
   │
26 │     fun f7() reads *(*) {
   │                    ^^^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:29:20
   │
29 │     fun f8() reads *(0x42) {
   │                    ^^^^^^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:32:30
   │
32 │     fun f9(a: address) reads *(a) {
   │                              ^^^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:35:27
   │
35 │     fun f10(x: u64) reads *(make_up_address(x)) {
   │                           ^^^^^^^^^^^^^^^^^^^^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:42:22
   │
42 │     fun f11() !reads *(0x42), *(0x43) {
   │                      ^^^^^^^

error: not supported before language version `2.4-unstable`: read/write access specifiers.
   ┌─ tests/checking-lang-v2.4/access_specifiers/access_ok.move:42:31
   │
42 │     fun f11() !reads *(0x42), *(0x43) {
   │                               ^^^^^^^
